projetGL/src/test/deca/context/invalid/provided/02_invalid_cast_int_to_boolean.deca
{
    int x;
    boolean b;
    
    x = 10;

    // Erreur sémantique : cast int -> boolean n'est pas autorisé
    b = (boolean)(x);

    println("Conversion int -> boolean refusée");
}
